--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -3,7 +3,7 @@
 
     <app-page-title title="{{ product.name }}" [children]="[{title: 'Products', link: '/products'}, {title: product.name}]"></app-page-title>
 
-
+ <!-- Prueva de comit soffware-->
     <!-- Page Content-->
     <div class="container padding-bottom-3x mb-1">
       <div class="row">
